Fix dropdown overflow cropping. Fixes #132

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -180,7 +180,6 @@ html, body, .container {
 
 .network-channels {
     display: block;
-    overflow: hidden;
 }
 
 .group-users {
